--- a/Fatigue_model.ipynb
+++ b/Fatigue_model.ipynb
@@ -9022,7 +9022,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0b3b611e",
+   "id": "d7fe95bf",
    "metadata": {},
    "outputs": [
     {
@@ -9053,7 +9053,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f5764140",
+   "id": "ae3afa53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9063,7 +9063,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f91dec7d",
+   "id": "d00909dd",
    "metadata": {},
    "outputs": [
     {
@@ -9448,7 +9448,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ff57cbb5",
+   "id": "5a554a6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9458,7 +9458,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c459ef4c",
+   "id": "4e6970fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9469,7 +9469,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d774c9ce",
+   "id": "2301c04b",
    "metadata": {},
    "outputs": [
     {
@@ -9490,7 +9490,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "14c969a2",
+   "id": "9c90486d",
    "metadata": {},
    "outputs": [
     {
@@ -9875,7 +9875,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cc8beb48",
+   "id": "cdd1bb8a",
    "metadata": {},
    "outputs": [
     {
@@ -9907,7 +9907,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "aab2aa92",
+   "id": "f38a39f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9918,7 +9918,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4fe0f762",
+   "id": "73b2029f",
    "metadata": {},
    "outputs": [
     {
@@ -10303,7 +10303,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "031dcdec",
+   "id": "bf969d71",
    "metadata": {},
    "outputs": [
     {
@@ -10335,7 +10335,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8d1c36c9",
+   "id": "6739eaab",
    "metadata": {},
    "outputs": [
     {
@@ -10357,7 +10357,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b8dd6f5a",
+   "id": "e321ff9b",
    "metadata": {},
    "outputs": [
     {
@@ -10379,7 +10379,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1dd225ff",
+   "id": "3226791a",
    "metadata": {},
    "outputs": [
     {
@@ -10400,7 +10400,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bd887137",
+   "id": "4e6fd236",
    "metadata": {},
    "outputs": [
     {
@@ -10432,7 +10432,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bba32c08",
+   "id": "b18f0a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10446,7 +10446,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5fc0c2b6",
+   "id": "2a835723",
    "metadata": {},
    "outputs": [
     {
@@ -10477,7 +10477,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "04fcef4b",
+   "id": "fbbc9dad",
    "metadata": {},
    "outputs": [
     {
@@ -10863,7 +10863,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f59b45cf",
+   "id": "7b328bc6",
    "metadata": {},
    "outputs": [
     {
@@ -10888,7 +10888,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "291c5973",
+   "id": "90399d70",
    "metadata": {},
    "outputs": [
     {
@@ -10919,7 +10919,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "b2cb0700",
+   "id": "801815b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10932,7 +10932,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e1286c2f",
+   "id": "e9fc9069",
    "metadata": {},
    "outputs": [
     {
@@ -10962,8 +10962,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "id": "6e120679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#outliers for heart rate\n",
+    "hrq1=final2['calories'].quantile(0.25)\n",
+    "hrq3=final2['calories'].quantile(0.75)\n",
+    "hiqr=hrq3-hrq1\n",
+    "upper_limit=q3+(1.5*hiqr)\n",
+    "lower_limit=q1-(1.5*hiqr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7f80c702",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_1552\\2447770155.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mboxplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfinal2\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'hear_rate'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'sb' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "sb.boxplot(x=final2['hear_rate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "65c068e9",
+   "id": "fd436de5",
    "metadata": {},
    "outputs": [],
    "source": []
