--- a/Fatigue_model (1).ipynb
+++ b/Fatigue_model (1).ipynb
@@ -21276,7 +21276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "id": "1ace9575",
    "metadata": {},
    "outputs": [
@@ -21331,6 +21331,63 @@
     "print('Root mean squared error: %.2f' % rmse)\n",
     "print('Mean absolute error: %.2f' % mae)\n",
     "print('R-squared: %.2f' % r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "67c9e8fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean squared error: 2.37\n",
+      "Root mean squared error: 1.54\n",
+      "Mean absolute error: 0.70\n",
+      "R-squared: 0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using randomforest to opimize\n",
+    "# Import necessary libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Load data\n",
+    "data = pd.read_excel(\"C:/Users/user/Desktop/sem 6/Miniproject/project/Fatigue-Detection-Model/the final.xlsx\")\n",
+    "\n",
+    "# Prepare the data\n",
+    "X = data[['hear_rate', 'calories', 'BMI', 'resting_heart']]\n",
+    "y = data['FAS1']\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create and fit the random forest regression model\n",
+    "rf_model = RandomForestRegressor(random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the fatigue levels on testing data\n",
+    "y_pred = rf_model.predict(X_test)\n",
+    "\n",
+    "# Calculate evaluation metrics\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "# Print evaluation metrics\n",
+    "print('Mean squared error: %.2f' % mse)\n",
+    "print('Root mean squared error: %.2f' % rmse)\n",
+    "print('Mean absolute error: %.2f' % mae)\n",
+    "print('R-squared: %.2f' % r2)\n",
+    "\n"
    ]
   },
   {
