hyperparameter tuning done

--- a/Fatigue_model (1).ipynb
+++ b/Fatigue_model (1).ipynb
@@ -21650,7 +21650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e56d30f",
+   "id": "a6b8c767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21660,7 +21660,6 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import optuna\n",
     "import joblib\n",
     "\n",
     "# Load data\n",
@@ -21673,35 +21672,8 @@
     "# Split data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Define the objective function for Optuna\n",
-    "def objective(trial):\n",
-    "    params = {\n",
-    "        'n_estimators': trial.suggest_int('n_estimators', 100, 1000),     # Number of trees in the forest\n",
-    "        'max_depth': trial.suggest_int('max_depth', 5, 30),                # Maximum depth of the tree\n",
-    "        'min_samples_split': trial.suggest_int('min_samples_split', 2, 10), # Minimum number of samples required to split an internal node\n",
-    "        'min_samples_leaf': trial.suggest_int('min_samples_leaf', 1, 5)    # Minimum number of samples required to be at a leaf node\n",
-    "    }\n",
-    "    \n",
-    "    # Create the random forest regression model with the current hyperparameters\n",
-    "    model = RandomForestRegressor(**params, random_state=42)\n",
-    "    \n",
-    "    # Fit the model on the training data\n",
-    "    model.fit(X_train, y_train)\n",
-    "    \n",
-    "    # Predict the fatigue levels on testing data\n",
-    "    y_pred = model.predict(X_test)\n",
-    "    \n",
-    "    # Calculate the evaluation metric (e.g., mean squared error)\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    \n",
-    "    return mse\n",
-    "\n",
-    "# Perform hyperparameter optimization using Optuna\n",
-    "study = optuna.create_study(direction='minimize')\n",
-    "study.optimize(objective, n_trials=100)\n",
-    "\n",
-    "# Get the best hyperparameters from Optuna\n",
-    "best_params = study.best_params\n",
+    "# Set the best hyperparameters\n",
+    "best_params = {'n_estimators': 965, 'max_depth': 12, 'min_samples_split': 4, 'min_samples_leaf': 1}\n",
     "\n",
     "# Create the random forest regression model with the best hyperparameters\n",
     "best_model = RandomForestRegressor(**best_params, random_state=42)\n",
@@ -21724,9 +21696,6 @@
     "print('Mean absolute error: %.2f' % mae)\n",
     "print('R-squared: %.2f' % r2)\n",
     "\n",
-    "# Print the best hyperparameters found\n",
-    "print('Best hyperparameters:', best_params)\n",
-    "\n",
     "# Save the best model for future use\n",
     "joblib.dump(best_model, \"best_model.pkl\")\n"
    ]
@@ -21734,7 +21703,102 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc969db4",
+   "id": "ad9b4030",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean squared error: 2.31\n",
+      "Root mean squared error: 1.52\n",
+      "Mean absolute error: 0.76\n",
+      "R-squared: 0.98\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['best_model.pkl']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import joblib\n",
+    "\n",
+    "# Load data\n",
+    "data = pd.read_excel(\"C:/Users/user/Desktop/sem 6/Miniproject/project/Fatigue-Detection-Model/the final.xlsx\")\n",
+    "\n",
+    "# Prepare the data\n",
+    "X = data[['hear_rate', 'calories', 'BMI', 'resting_heart']]\n",
+    "y = data['FAS1']\n",
+    "\n",
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Set the best hyperparameters\n",
+    "best_params = {'n_estimators': 965, 'max_depth': 12, 'min_samples_split': 4, 'min_samples_leaf': 1}\n",
+    "\n",
+    "# Create the random forest regression model with the best hyperparameters\n",
+    "best_model = RandomForestRegressor(**best_params, random_state=42)\n",
+    "\n",
+    "# Fit the model on the training data\n",
+    "best_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict the fatigue levels on testing data using the best model\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "\n",
+    "# Calculate evaluation metrics\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "# Print evaluation metrics\n",
+    "print('Mean squared error: %.2f' % mse)\n",
+    "print('Root mean squared error: %.2f' % rmse)\n",
+    "print('Mean absolute error: %.2f' % mae)\n",
+    "print('R-squared: %.2f' % r2)\n",
+    "\n",
+    "# Save the best model for future use\n",
+    "joblib.dump(best_model, \"best_model.pkl\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "22fc20d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hear_rate' 'calories' 'BMI' 'resting_heart']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_pickle('best_model.pkl')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "79e74f50",
    "metadata": {},
    "outputs": [
     {
