model prediction as input parameters

--- a/Fatigue_model (1).ipynb
+++ b/Fatigue_model (1).ipynb
@@ -21798,6 +21798,44 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "77b15c94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted FAS score: 19.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load the saved model\n",
+    "best_model = joblib.load(\"best_model.pkl\")\n",
+    "\n",
+    "# Define the input values\n",
+    "input_heart_rate = 80\n",
+    "input_calories = 1500\n",
+    "input_bmi = 23.5\n",
+    "input_resting_heart_rate = 70\n",
+    "\n",
+    "# Prepare the input data\n",
+    "input_data = pd.DataFrame({'hear_rate': [input_heart_rate], 'calories': [input_calories], 'BMI': [input_bmi], 'resting_heart': [input_resting_heart_rate]})\n",
+    "\n",
+    "# Make predictions using the loaded model\n",
+    "predicted_fas_score = best_model.predict(input_data)\n",
+    "\n",
+    "# Print the predicted fatigue score\n",
+    "print('Predicted FAS score: %.2f' % predicted_fas_score)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "79e74f50",
    "metadata": {},
    "outputs": [
